After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 631169 - sftp: fix poll() timeout.
sftp: fix poll() timeout.
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: sftp backend
unspecified
Other All
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2010-10-02 12:57 UTC by Andreas Henriksson
Modified: 2010-10-04 12:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sftp: fix poll() timeout. (1.04 KB, patch)
2010-10-02 12:57 UTC, Andreas Henriksson
none Details | Review

Description Andreas Henriksson 2010-10-02 12:57:45 UTC
When switching from select() to poll() in commit
"sftp: Use poll() to cope with openssh-5.6 changes" (c6be45c8934)
the difference in seconds vs milliseconds for select/poll timeout
argument was missed.

SFTP_READ_TIMEOUT is defined in seconds, so multiply it with 1000
when using it with poll().
Comment 1 Andreas Henriksson 2010-10-02 12:57:47 UTC
Created attachment 171568 [details] [review]
sftp: fix poll() timeout.

When switching from select() to poll() in commit
"sftp: Use poll() to cope with openssh-5.6 changes" (c6be45c8934)
the difference in seconds vs milliseconds for select/poll timeout
argument was missed.

SFTP_READ_TIMEOUT is defined in seconds, so multiply it with 1000
when using it with poll().
Comment 2 Andreas Henriksson 2010-10-04 12:01:32 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.


http://git.gnome.org/browse/gvfs/commit/?id=4033907045abcf498686c1b34be7b0160260088d