sftp: fix poll() timeout.

When switching from select() to poll() in commit
"sftp: Use poll() to cope with openssh-5.6 changes" (c6be45c8934)
the difference in seconds vs milliseconds for select/poll timeout
argument was missed.

SFTP_READ_TIMEOUT is defined in seconds, so multiply it with 1000
when using it with poll().

https://bugzilla.gnome.org/show_bug.cgi?id=631169